--- a/shippable.yml
+++ b/shippable.yml
@@ -3,6 +3,7 @@ language: java
 jdk:
   - openjdk8
   
-ci:
-  - cd example
-  - mvn clean install
+build:
+  ci:
+    - cd example
+    - mvn clean install
